<resources>
    <string name="app_name">Hi Girl AI Girlfriend</string>

    <string name="Admob_AppID">ca-app-pub-6962041358828910~3765398962</string>
    <string name="Admob_AppOpen">ca-app-pub-3940256099942544/9257395921</string>
    <string name="Admob_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Admob_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Admob_Native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="privacy">https://htcodesprivacypolicy.blogspot.com/2023/12/hi-girl-privacy-policy.html</string>














    <string name="_150_00">₹ 999.00</string>
    <string name="_150_01">₹ 599.00</string>
    <string name="_150_02">₹ 3999.00</string>
    <string name="choose_app_icon">Choose App Icon</string>
    <string name="enter_email">Please enter email address.</string>
    <string name="enter_new_password">Enter New Password.</string>
    <string name="enter_valid_email">Please enter valid email address.</string>
    <string name="enter_valid_mail">Please enter valid email address.</string>
    <string name="enter_valid_otp_code">Please enter valid OTP Code</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="let_igirl_know_your_pronouns">Let iGirl know your pronouns</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="library_name">Oops! No Internet!</string>
    <string name="login">Login</string>
    <string name="logout">Logout?</string>
    <string name="logout1">Logout</string>
    <string name="ok">OK</string>
    <string name="or">Continue as Guest</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="password">Password</string>
    <string name="password_noy_match">Password not match</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="toast_message">Toast message</string>
    <string name="txt_enter_email">Please enter email ID</string>
    <string name="txt_enter_password">Please Enter Password</string>
    <string name="txt_enter_valid_password">Minimum 6 character required.</string>
    <string name="txt_valid_first_name">Please enter valid name</string>
    <string name="update">Update</string>
    <string name="we_re_better_than_ever">We\'re better than ever</string>
    <string name="week">/ week</string>
    <string name="wifi">Wifi</string>
    <string name="write_a_message">Write a message</string>
    <string name="year">/ year</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="re_enter_password">Re-enter your Password</string>
    <string name="dummy">Please enter your Email to receive a link to create \n new password via Email.</string>
    <string name="send">Send</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">225961085271-3e18glgc3dv32neq1mgee5fmju13jhcj.apps.googleusercontent.com</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="don_t_receive_code">Don’t receive code?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_am_here_to_assist_you_with_any_questions_or_inquiries_you_may_have">I am here to fulfill your all desires , you can ask me anything.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_us">Rate Us!</string>
    <string name="are_you_sure_want_to_exit_from_application">Are you sure want to exit from application?</string>
    <string name="please_update_the_opengpt_chat_gpt_ai_chatbot">Please update the AnaAI : Virtual AI Girl friend</string>
    <string name="this_icon_will_appear_to_your_home_screen">This icon will appear to your home screen</string>
    <string name="get_unlimited_roleplay_smart_conversation_ability_to_customize_your_avatar">Get unlimited roleplay, smart conversation, ability to customize your avatar</string>
    <string name="month">/ month</string>
    <string name="alert">Please do not leave page until your purchased credits are added to your balanced!</string>
    <string name="no">No</string>
    <string name="text_confirm_for_logout">Are you sure you want to Logout ?</string>
    <string name="accept_amp_continue">Accept &amp; Continue</string>
</resources>